FIX: Login/signup buttons cut off [653]

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,5 +1,5 @@
 .d-header .header-buttons{
-    margin-top: -45px;
+    margin-top: -5px;
 }
 #indeni-header{
     float:left;
